Footer Placeholder, align,Press Fix

--- a/css/style.css
+++ b/css/style.css
@@ -110,8 +110,8 @@ a:hover{color:#000}
 .icon_hb{background-position:  4px -112px;}
 .icon_yk{background-position:  -115px -112px;}
 .icon_yt{background-position:  -57px -109px;}
-.icon_wx{background-position:  -57px -109px;}
-.icon_lk{background-position:  -57px -109px;}
+.icon_wx{background-position:  4px 6px;}
+.icon_lk{background-position:  -53px -52px;}
 .find_wx{background-position:  0px -120px;}
 .ft_workmbd{width: 250px;height: 200px;padding-top:35px;}
 .work_item{float: left;background: url('../images/ft_network.png') no-repeat 0 0;width: 125px;height: 100px;opacity: 0.5;}
@@ -119,6 +119,7 @@ a:hover{color:#000}
 .icon_bk{background-position: 100% 3%;}
 a.icon_bg{background-position: 0px -115px;}
 .icon_cc{background-position: 112% 95%;}
+.icon_butterfly{background-position:-8% -17%;}
 
 
 .section{}
@@ -269,29 +270,62 @@ a.icon_bg{background-position: 0px -115px;}
 }
 .press_img:hover .press_folding_corner {
     /*background-position: -311px 0;*/
-    -webkit-animation: bkg 0.2s steps(10);
-    -moz-animation: bkg 0.2s steps(10);
-    -o-animation: bkg 0.2s steps(10);
-    animation: bkg 0.2s steps(10);
-    animation-timing-function: ease-out;
+    -webkit-animation: bkg .15s steps(10);
+    -moz-animation: bkg .15s steps(10);
+    -o-animation: bkg .15s steps(10);
+    animation: bkg .15s steps(10);
+    /*animation-timing-function: ease-out;*/
     -webkit-animation-fill-mode: forwards;
     animation-fill-mode: forwards;
 }
+
 @-webkit-keyframes bkg {
-    0% {background-position: -19px  0;}
-    100% {background-position: -363px -15px;}
+    0% {
+        background: rgba(0, 0, 0, 0) url("../images/Sequence.png") no-repeat scroll -17px -15px;
+        width: 32px;
+        height: 33px;
+    }
+    100% {
+        background: rgba(0, 0, 0, 0) url("../images/Sequence.png") no-repeat scroll -363px -15px;
+        width: 32px;
+        height: 33px;
+    }
 }
 @-moz-keyframes bkg {
-    0% {background-position: -19px  0;}
-    100% {background-position: -363px -15px;}
+    0% {
+        background: rgba(0, 0, 0, 0) url("../images/Sequence.png") no-repeat scroll -17px -15px;
+        width: 32px;
+        height: 33px;
+    }
+    100% {
+        background: rgba(0, 0, 0, 0) url("../images/Sequence.png") no-repeat scroll -363px -15px;
+        width: 32px;
+        height: 33px;
+    }
 }
 @-o-keyframes bkg {
-    0% {background-position: -19px  0;}
-    100% {background-position: -363px -15px;}
+    0% {
+        background: rgba(0, 0, 0, 0) url("../images/Sequence.png") no-repeat scroll -17px -15px;
+        width: 32px;
+        height: 33px;
+    }
+    100% {
+        background: rgba(0, 0, 0, 0) url("../images/Sequence.png") no-repeat scroll -363px -15px;
+        width: 32px;
+        height: 33px;
+    }
 }
 @keyframes bkg {
-    0% {background-position: -19px  0;}
-    100% {background-position: -363px -15px;}
+    0% {
+        background: rgba(0, 0, 0, 0) url("../images/Sequence.png") no-repeat scroll -17px -15px;
+        width: 32px;
+        height: 33px;
+    }
+    100% {
+        background: rgba(0, 0, 0, 0) url("../images/Sequence.png") no-repeat scroll -363px -15px;
+        width: 32px;
+        height: 33px;
+    }
 }
 /* section home */
 .sec_home{}
